added images and paragraphs

--- a/Login.html
+++ b/Login.html
@@ -9,10 +9,10 @@
     <h1>LOGIN</h1>
     <form>
         <label for="name">USER NAME</label>&nbsp;&nbsp;&nbsp;
-        <input type="text" id="name" placeholder="Enter your name" name="namerequired/><br/><br/><br/>
+        <input type="text" id="name" placeholder="Enter your name" required/><br/><br/><br/>
         <label for="pass">PASSWORD</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <input type="password" id="pass" placeholder="Enter your Password" required/><br/><br/><br/>
-        <button type="submit">LOGIN</button><br/><br/>
+        <button type="submit"><a href="/index.html">LOGIN</a></button><br/><br/>
     </form>
     <a href="mailto:nsa03@gmail.com">forgot password</a>
     <p>New User<a href="signup.html">&nbsp;&nbsp;&nbsp;Sign Up</a></p>
