--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <h1 align="center">ABOUT US</h1>
   <pre>
     <h2>                        
-        <u>Our Story: A Journey of Passion and Innovation</u>   <a href="project1.html">[ Back to Home ]</a>
+        <u>Our Story: A Journey of Passion and Innovation</u>   <a href="/index.html">[ Back to Home ]</a>
 
                 Our journey began when a group of tech enthusiasts recognized a gap in the market for reliable, affordable, 
 and innovative computing solutions. With a shared passion for technology and a vision to revolutionize the way people interact with devices,
