--- a/signup.html
+++ b/signup.html
@@ -10,20 +10,21 @@
     <h2>SIGN UP</h2>
     <form>
         <label for="name">FIRST NAME</label>&nbsp;&nbsp;&nbsp;
-        <input type="text" id="name" placeholder="Enter your first name" name="first" /><br/><br/><br/>
+        <input type="text" id="name" placeholder="Enter your first name"  /><br/><br/><br/>
         <label for="name">LAST NAME</label>&nbsp;&nbsp;&nbsp;
-        <input type="text" id="name" placeholder="Enter your last name" name="last"/><br/><br/><br/>
+        <input type="text" id="name" placeholder="Enter your last name" /><br/><br/><br/>
         <label for="name">CONFIRM USER NAME</label>&nbsp;&nbsp;&nbsp;
-        <input type="text" id="name" placeholder="Enter your user name" name="user" required/><br/><br/><br/>
+        <input type="text" id="name" placeholder="Enter your user name" required/><br/><br/><br/>
         <label for="num">MOBILE NO</label>&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="number" id="num" placeholder="Enter your mobile number" name="mobile" required/><br/><br/><br/>
+        <input type="number" id="num" placeholder="Enter your mobile number" required/><br/><br/><br/>
         <label for="mail">EMAIL</label>&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="email" id="mail" placeholder="Enter your email" name="mail" required/><br/><br/><br/>
+        <input type="email" id="mail" placeholder="Enter your email" required/><br/><br/><br/>
         <label for="pass">PASSWORD</label>&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="password" id="pass" placeholder="Enter your Password" name="pass" required/><br/><br/><br/>
+        <input type="password" id="pass" placeholder="Enter your Password" required/><br/><br/><br/>
         <label for="cpass">CONFIRM PASSWORD</label>&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="password" id="cpass" placeholder="Enter your Confirm Password" name="cpass" required/><br/><br/><br/>
-        <button type="submit"><a href="Login.html">SIGN UP</a></button>
+        <input type="password" id="cpass" placeholder="Enter your Confirm Password" required/><br/><br/><br/>
+        <button type="submit" class="con">SIGN UP</button>
+        <p><a href="/Login.html" >Back to Login Page</a></p>
     </form>
 </body>
 </html>
