--- a/product.html
+++ b/product.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <header>
-        <h1>OUR PRODUCTS</h1><a href="/project1.html">[ Back to Home ]</a>
+        <h1>OUR PRODUCTS</h1><a href="/index.html">[ Back to Home ]</a>
         <div>
         <figure align="center">
-            <img src="/pictures/artin-bakhan-SqLyNHbsLKQ-unsplash (1).jpg" style="width:400px;height: 400px;"/>
+            <img src="/picture/artin-bakhan-SqLyNHbsLKQ-unsplash.jpg" style="width:400px;height: 400px;"/>
             <figcaption>Laptop Model 1
                 <p>$999</p>
                 <a href="#"class="button">Buy Now</a>
@@ -19,7 +19,7 @@
     </div>
     <div>
         <figure align="center">
-            <img src="/pictures/kindpng_2977692.png" style="width:400px;height: 400px;"/>
+            <img src="/picture/kindpng_2977692.png" style="width:400px;height: 400px;"/>
             <figcaption>Laptop Model 2
                 <p>$899</p>
                 <a href="#"class="button">Buy Now</a>
@@ -28,7 +28,7 @@
     </div>
     <div>
         <figure align="center">
-            <img src="/pictures/maxim-hopman-Hin-rzhOdWs-unsplash.jpg"style="width:400px;height: 400px;"/>
+            <img src="/picture/maxim-hopman-Hin-rzhOdWs-unsplash.jpg"style="width:400px;height: 400px;"/>
             <figcaption>Laptop Model 3
                 <p>$199</p>
                 <a href="#"class="button">Buy Now</a>
@@ -37,7 +37,7 @@
     </div>
     <div>
         <figure align="center">
-            <img src="/pictures/PngItem_5222489.png" style="width:400px;height: 400px;"/>
+            <img src="/picture/PngItem_5222489.png" style="width:400px;height: 400px;"/>
             <figcaption>Mobile Model 1
                 <p>$699</p>
                 <a href="#"class="button">Buy Now</a>
@@ -46,7 +46,7 @@
     </div>
     <div>
         <figure align="center">
-            <img src="/pictures/wallpaperflare.com_wallpaper.jpg" style="width:400px;height: 400px;"/>
+            <img src="/picture/wallpaperflare.com_wallpaper.jpg" style="width:400px;height: 400px;"/>
             <figcaption>Mobile Model 2
                 <p>$490</p>
                 <a href="#"class="button">Buy Now</a>
