--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
             <img src="/picture/artin-bakhan-SqLyNHbsLKQ-unsplash.jpg" style="width:400px;height: 400px;"/>
             <figcaption>Laptop Model 1
                 <p>$999</p>
-                <a href="#"class="button">Buy Now</a>
+                <button type="submit"><a href="#">Buy Now</a></button>
             </figcaption>
         </figure>
     </div>
@@ -22,7 +22,7 @@
             <img src="/picture/kindpng_2977692.png" style="width:400px;height: 400px;"/>
             <figcaption>Laptop Model 2
                 <p>$899</p>
-                <a href="#"class="button">Buy Now</a>
+                <button type="submit"><a href="#">Buy Now</a></button>
             </figcaption>
         </figure>
     </div>
@@ -31,7 +31,7 @@
             <img src="/picture/maxim-hopman-Hin-rzhOdWs-unsplash.jpg"style="width:400px;height: 400px;"/>
             <figcaption>Laptop Model 3
                 <p>$199</p>
-                <a href="#"class="button">Buy Now</a>
+                <button type="submit"><a href="#">Buy Now</a></button>
             </figcaption>
         </figure>
     </div>
@@ -40,7 +40,7 @@
             <img src="/picture/PngItem_5222489.png" style="width:400px;height: 400px;"/>
             <figcaption>Mobile Model 1
                 <p>$699</p>
-                <a href="#"class="button">Buy Now</a>
+                <button type="submit"><a href="#">Buy Now</a></button>
             </figcaption>
         </figure>
     </div>
@@ -49,7 +49,7 @@
             <img src="/picture/wallpaperflare.com_wallpaper.jpg" style="width:400px;height: 400px;"/>
             <figcaption>Mobile Model 2
                 <p>$490</p>
-                <a href="#"class="button">Buy Now</a>
+                <button type="submit"><a href="#">Buy Now</a></button>
             </figcaption>
         </figure>
     </div>
